implement text search field (to search component data) make text search field configurable to hide it where needed

--- a/src/app/components/filters/filter-tree/filter-tree.component.css
+++ b/src/app/components/filters/filter-tree/filter-tree.component.css
@@ -5,7 +5,8 @@ mat-radio-group {
 }
 
 mat-radio-button{
-  margin: 5px;
+
+  display: block;
 
 }
 
@@ -17,4 +18,12 @@ mat-card {
 }
 mat-card-content {
   width: 220px;
+}
+
+mat-label {
+
+}
+
+.spacer {
+  flex: 1 1 auto;
 }
