--- a/src/app/components/filters/datetime-picker/datetime-picker.component.html
+++ b/src/app/components/filters/datetime-picker/datetime-picker.component.html
@@ -33,7 +33,7 @@
           <mat-label>Select:</mat-label>
 <!-- USING ngModel for data binding-->
           <input matInput [(ngModel)]="selectedDay" name="selectedDay" [matDatepicker]="picker" readonly
-                 (dateInput)="addDateEvent('input', $event)" (select)="addNewDate(picker)">
+                 (dateInput)="addDateEvent('input', $event)" (select)="dateChange(picker)">
            <mat-datepicker-toggle  matSuffix [for]="picker" >
           </mat-datepicker-toggle>
           <mat-datepicker #picker disabled="false"></mat-datepicker>
@@ -82,11 +82,11 @@
 <!--Testing-->
 <!--<label>Add an item: <input #newItem></label>-->
 <!--<button (click)="addNewItem(newItem.value)">Add to parent's list</button>-->
-<div>{{dateDayPickerData}}</div>
-<br />
-<div>Range with ngFor:</div>
-<div *ngFor="let rangeData of dateRangePickerDataArr">{{rangeData}}
-<br />
-</div><div>Range no ngFor:</div>
-<div>{{dateRangePickerDataStart}}</div>
-<div>{{dateRangePickerDataEnd}}</div>
+<!--<div>{{dateDayPickerData}}</div>-->
+<!--<br />-->
+<!--<div>Range with ngFor:</div>-->
+<!--<div *ngFor="let rangeData of dateRangePickerDataArr">{{rangeData}}-->
+<!--<br />-->
+<!--</div><div>Range no ngFor:</div>-->
+<!--<div>{{dateRangePickerDataStart}}</div>-->
+<!--<div>{{dateRangePickerDataEnd}}</div>-->
