--- a/src/app/components/filters/filter-tree/filter-tree.component.html
+++ b/src/app/components/filters/filter-tree/filter-tree.component.html
@@ -2,19 +2,23 @@
   <mat-card-header>
     <mat-radio-group color="primary" >
       <mat-list>
-        <mat-label>Media</mat-label>
-        <mat-radio-button class="radio-button" ngModel value="media" checked="true"></mat-radio-button>
+        <mat-label>AND</mat-label>
+        <mat-radio-button class="radio-button" value="and" checked="true"></mat-radio-button>
       </mat-list>
+      <span class="spacer"></span>
       <mat-list>
-        <mat-label>Both</mat-label>
-        <mat-radio-button class="radio-button" ngModel value="both"></mat-radio-button>
+        <mat-label>OR</mat-label>
+        <mat-radio-button class="radio-button" value="or"></mat-radio-button>
       </mat-list>
+      <span class="spacer"></span>
       <mat-list>
-        <mat-label>Engagement</mat-label>
-        <mat-radio-button class="radio-button" ngModel value="Engagement"></mat-radio-button>
+        <mat-label>NOT</mat-label>
+        <mat-radio-button class="radio-button" value="not"></mat-radio-button>
       </mat-list>
+      <span class="spacer"></span>
     </mat-radio-group>
   </mat-card-header>
+
 <mat-card-content>
   <mat-list-item>
       <app-datetime-picker></app-datetime-picker>
