datepicker start & end date range

--- a/src/app/pages/page3/page3.component.html
+++ b/src/app/pages/page3/page3.component.html
@@ -1,4 +1,4 @@
 <app-datetime-picker (onRangeSelected)="datePickerData($event)"></app-datetime-picker>
 
-<div>{{dateSelection.start}}</div>
-<div>{{dateSelection.end}}</div>
+<div>{{dateSelection.start | date}}</div>
+<div>{{dateSelection.end | date}}</div>
