--- a/src/app/pages/page3/page3.component.html
+++ b/src/app/pages/page3/page3.component.html
@@ -1,4 +1,5 @@
 <app-datetime-picker (onRangeSelected)="datePickerData($event)"></app-datetime-picker>
 
-<div>{{dateSelection.start | date}}</div>
-<div>{{dateSelection.end | date}}</div>
+<div>{{dateSelection.start | date: 'EEEE, MMMM d, y, h:mm:ss a zzzz' }}</div>
+<div>{{dateSelection.end | date: "full" }}</div>
+
