--- a/src/app/components/filters/datetime-picker/datetime-picker.component.html
+++ b/src/app/components/filters/datetime-picker/datetime-picker.component.html
@@ -56,6 +56,7 @@
                    placeholder="End date"
                    #dateRangeEnd
                    (dateChange)="dateRangeChange(dateRangeStart, dateRangeEnd)"
+                   (dateInput)="callParentGreet(dateRangeStart,dateRangeEnd)"
                    readonly>
           </mat-date-range-input>
           <mat-datepicker-toggle matSuffix
@@ -88,5 +89,6 @@
 <!--<div *ngFor="let rangeData of dateRangePickerDataArr">{{rangeData}}-->
 <!--<br />-->
 <!--</div><div>Range no ngFor:</div>-->
-<div>{{dateRangePickerDataStart}}</div>
-<div>{{dateRangePickerDataEnd}}</div>
+<!--<div>{{dateRangePickerDataStart}}</div>-->
+<!--<div>{{dateRangePickerDataEnd}}</div>-->
+<!--<button (click)="callParentGreet()">Greet</button>-->
