--- a/src/app/pages/page3/page3.component.html
+++ b/src/app/pages/page3/page3.component.html
@@ -2,11 +2,11 @@
 <!--<app-datetime-picker (onRangeSelected_2)="dateSelection_2($event)"></app-datetime-picker>-->
 <app-datetime-picker (greetEvent)="greet($event)"></app-datetime-picker>
 
-<div>{{dateSelection.start | date: 'EEEE, MMMM d, y,h:mm:ss a zzzz ' }}</div>
-<div>{{dateSelection.end | date: "full" }}</div>
+<div>{{dateSelection.dateRangeStart | date: 'EEEE, MMMM d, y,h:mm:ss a zzzz ' }}</div>
+<div>{{dateSelection.dateRangeEnd | date: "full" }}</div>
 
 <!--<div>{{dateSelectionModel.singleDate}}</div>-->
 <!--<div>{{dateSelectionModel.startRangeDate}}</div>-->
 <!--<div>{{dateSelectionModel.endRangeDate}}</div>-->
-<div>{{dateSelection_2.start  | date: 'EEEE, MMMM d, y,h:mm:ss a zzzz '}}</div>
-<div>{{dateSelection_2.end}}</div>
+<div>{{model}}</div>
+<div>{{model}}</div>
