--- a/src/app/pages/page3/page3.component.html
+++ b/src/app/pages/page3/page3.component.html
@@ -1,6 +1,6 @@
 <app-datetime-picker (onRangeSelected)="datePickerData($event)"></app-datetime-picker>
 <!--<app-datetime-picker (onRangeSelected_2)="dateSelection_2($event)"></app-datetime-picker>-->
-<app-datetime-picker (greetEvent)="greet($event)"></app-datetime-picker>
+<!--<app-datetime-picker (greetEvent)="greet($event)"></app-datetime-picker>-->
 
 <div>{{dateSelection.dateRangeStart | date: 'EEEE, MMMM d, y,h:mm:ss a zzzz ' }}</div>
 <div>{{dateSelection.dateRangeEnd | date: "full" }}</div>
@@ -8,5 +8,5 @@
 <!--<div>{{dateSelectionModel.singleDate}}</div>-->
 <!--<div>{{dateSelectionModel.startRangeDate}}</div>-->
 <!--<div>{{dateSelectionModel.endRangeDate}}</div>-->
-<div>{{model}}</div>
-<div>{{model}}</div>
+<!--<div>{{dateRangeStart}}</div>-->
+<!--<div>{{dateRangeEnd}}</div>-->
