made working today, yesterday, last week, last month

--- a/src/app/pages/page3/page3.component.html
+++ b/src/app/pages/page3/page3.component.html
@@ -1,5 +1,5 @@
 <app-datetime-picker (onRangeSelected)="datePickerData($event)"></app-datetime-picker>
-<app-datetime-picker (onRangeSelected_2)="datePickerData_2($event)"></app-datetime-picker>
+<!--<app-datetime-picker (onRangeSelected_2)="datePickerData_2($event)"></app-datetime-picker>-->
 <!--<app-datetime-picker (greetEvent)="greet($event)"></app-datetime-picker>-->
 
 <div>{{dateSelection.dateRangeStart | date: 'EEEE, MMMM d, y,h:mm:ss a zzzz ' }}</div>
