--- a/src/app/components/filters/datetime-picker/datetime-picker.component.html
+++ b/src/app/components/filters/datetime-picker/datetime-picker.component.html
@@ -77,10 +77,10 @@
 <!--          <mat-grid-tile>yesterday</mat-grid-tile><mat-grid-tile>{{yesterdaySearch.setDate(this.yesterdaySearch.getDate() - 1 ) | date}}</mat-grid-tile>-->
 <!--          <mat-grid-tile>last week</mat-grid-tile><mat-grid-tile>{{lastWeekSearch.setDate(this.lastWeekSearch.getDate() - 7 )  | date}}</mat-grid-tile>-->
 <!--          <mat-grid-tile>last month</mat-grid-tile><mat-grid-tile>{{lastMonthSearch.setMonth(this.lastMonthSearch.getMonth() - 1)| date}}</mat-grid-tile>-->
-          <mat-grid-tile class="clickable" >today<span class="spacer"></span><span class="spacer-color">0</span></mat-grid-tile>
-          <mat-grid-tile class="clickable" >yesterday<span class="spacer"></span><span class="spacer-color">0</span></mat-grid-tile>
-          <mat-grid-tile class="clickable" >last week<span class="spacer"></span><span class="spacer-color">0</span></mat-grid-tile>
-          <mat-grid-tile class="clickable" >last month<span class="spacer"></span><span class="spacer-color">0</span></mat-grid-tile>
+          <mat-grid-tile class="clickable" >today<span class="spacer"></span><span matRipple class="spacer-color">0</span></mat-grid-tile>
+          <mat-grid-tile class="clickable" >yesterday<span class="spacer"></span><span matRipple class="spacer-color">0</span></mat-grid-tile>
+          <mat-grid-tile class="clickable" >last week<span class="spacer"></span><span matRipple class="spacer-color">0</span></mat-grid-tile>
+          <mat-grid-tile class="clickable" >last month<span class="spacer"></span><span matRipple class="spacer-color">0</span></mat-grid-tile>
 
         </mat-grid-list>
 
