--- a/src/app/pages/page3/page3.component.html
+++ b/src/app/pages/page3/page3.component.html
@@ -1,8 +1,8 @@
 <app-datetime-picker (onRangeSelected)="datePickerData($event)"></app-datetime-picker>
 <!--<app-datetime-picker (onRangeSelected_2)="datePickerData_2($event)"></app-datetime-picker>-->
-<!--<app-datetime-picker (greetEvent)="greet($event)"></app-datetime-picker>-->
 
 <div>{{dateSelection.dateRangeStart | date: 'EEEE, MMMM d, y,h:mm:ss a zzzz ' }}</div>
 <div>{{dateSelection.dateRangeEnd | date: "full" }}</div>
 
-<div>{{dateSelection.dateRangeStart | date}}</div>
+<div>{{dateSel.dateRangeStart | date}}</div>
+<div>{{dateSel.dateRangeEnd | date}}</div>
