--- a/src/app/pages/page3/page3.component.html
+++ b/src/app/pages/page3/page3.component.html
@@ -4,5 +4,5 @@
 <div>{{dateSelection.dateRangeStart | date: 'EEEE, MMMM d, y,h:mm:ss a zzzz ' }}</div>
 <div>{{dateSelection.dateRangeEnd | date: "full" }}</div>
 
-<div>{{dateSel.dateRangeStart | date}}</div>
-<div>{{dateSel.dateRangeEnd | date}}</div>
+<!--<div>{{dateSel.dateRangeStart | date}}</div>-->
+<!--<div>{{dateSel.dateRangeEnd | date}}</div>-->
