--- a/src/app/components/filters/filter-tree/filter-tree.component.html
+++ b/src/app/components/filters/filter-tree/filter-tree.component.html
@@ -26,7 +26,7 @@
     </mat-list-item>
 
     <mat-list-item>
-      <app-datetime-picker></app-datetime-picker>
+      <app-topics></app-topics>
     </mat-list-item>
 
   </mat-card-content>
