cleaning up code, made Form Group, some tweaks

--- a/src/app/components/filters/topics/topics.component.html
+++ b/src/app/components/filters/topics/topics.component.html
@@ -11,20 +11,23 @@
   <mat-card-content *ngIf="collapsed">
     <mat-list>
 
+      <!--                                    TODO style search component  !!!!!!!!!!-->
+        <app-search></app-search>
 
         <mat-grid-list cols="1" rowHeight="20px" gutterSize="5px">
+
           <mat-grid-tile class="clickable" >Toopic item
             <span class="spacer"></span><span matRipple class="spacer-color">0</span>
           </mat-grid-tile>
+
           <mat-grid-tile class="clickable" >Toopic item
             <span class="spacer"></span><span matRipple class="spacer-color">0</span>
           </mat-grid-tile>
+
           <mat-grid-tile class="clickable" >Toopic item
             <span class="spacer"></span><span matRipple class="spacer-color">0</span>
           </mat-grid-tile>
-          <mat-grid-tile class="clickable" >Toopic item
-            <span class="spacer"></span><span matRipple class="spacer-color">0</span>
-          </mat-grid-tile>
+
         </mat-grid-list>
 
 
