--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,6 +1,6 @@
 
-<form class="example-form">
-  <mat-form-field class="example-full-width">
+<form  class="short200">
+  <mat-form-field>
     <span matPrefix> </span>
     <input type="tel" matInput placeholder="Search" name= "search" [(ngModel)]= "search">
     <button matSuffix mat-button><mat-icon >search</mat-icon></button>
