--- a/src/app/components/filters/filter-tree/filter-tree.component.html
+++ b/src/app/components/filters/filter-tree/filter-tree.component.html
@@ -29,6 +29,11 @@
       <app-topics></app-topics>
     </mat-list-item>
 
+    <mat-list-item>
+      <ul>
+        <li *ngFor="let i of filterTreeItems"><span>uuid: </span>{{i.uuid}}<span> ,name: </span>{{i.name}}</li>
+      </ul>
+    </mat-list-item>
   </mat-card-content>
 </mat-card>
 
