creating filter tree component and some css styles, making a drawer with lilst items

--- a/src/app/components/filters/filter-tree/filter-tree.component.html
+++ b/src/app/components/filters/filter-tree/filter-tree.component.html
@@ -1,11 +1,11 @@
-<mat-drawer-container class="example-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side">
-    <p>Auto-resizing sidenav</p>
-
+<mat-drawer-container class="drawer-container" >
+  <mat-drawer #drawer class="drawer-sidenav" mode="side">
+    <p>Sidenav</p>
 
   </mat-drawer>
 
-  <div class="example-sidenav-content">
+  <div class="sidenav-content">
+
     <button class="arrowChange" type="button" mat-button (click)="drawer.toggle()">
       <mat-icon >navigate_before</mat-icon>
     </button>
