--- a/src/app/components/filters/filter-tree/filter-tree.component.html
+++ b/src/app/components/filters/filter-tree/filter-tree.component.html
@@ -16,7 +16,8 @@
     <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
       <mat-tree-node *matTreeNodeDef="let node">
         <button mat-icon-button disabled></button>
-        {{node.name}}
+        {{node.name}}<button mat-icon-button disabled></button>
+        {{node.level}}
       </mat-tree-node>
       <!-- This is the tree node template for expandable nodes -->
       <mat-tree-node *matTreeNodeDef="let node;when: hasChild">
