--- a/src/app/components/filters/filter-tree/filter-tree.component.css
+++ b/src/app/components/filters/filter-tree/filter-tree.component.css
@@ -37,3 +37,10 @@ mat-card-content {
   background-color: #eeeeee;
 
 }
+button.dataFilterCollapse {
+  border: 1px solid #e0e0e0;
+  border-radius: 5px;
+  height: 24px;
+  text-align: center;
+  line-height: 10px;
+}
